--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,5 +6,6 @@
 		"ghcr.io/devcontainers/features/aws-cli:1": {}
 	},
 	"customizations": {},
+	"onCreateCommand": "sh ./.devcontainer/onCreateCommand.sh",
 	"postCreateCommand": "sh ./.devcontainer/postCreateCommand.sh"
 }
