--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,5 +15,6 @@
 		}
 	},
 	"onCreateCommand": "sh ./.devcontainer/onCreateCommand.sh",
-	"postCreateCommand": "sh ./.devcontainer/postCreateCommand.sh"
+	"postCreateCommand": "sh ./.devcontainer/postCreateCommand.sh",
+	"remoteUser": "root"
 }
